--- a/index.html
+++ b/index.html
@@ -9,12 +9,343 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" integrity="sha256-HAaDW5o2+LelybUhfuk0Zh2Vdk8Y2W2UeKmbaXhalfA="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
   <title>Bootstrap Theme</title>
 </head>
 
 <body>
-  <!-- START HERE -->
+
+  <div class="container">
+    <header id="db-main-header">
+      <div class="row no-gutters">
+        <div class="col-lg-4 col-md-5">
+          <img src="img/person1.jpg" alt="person1">
+        </div>
+        <div class="col-lg-8 col-md-7">
+          <div class="d-flex flex-column">
+            <div class="p-5 bg-dark text-white">
+              <div class="d-flex flex-row justify-content-between align-items-center">
+
+                <h1 class="display-4">John Doe</h1>
+
+                <div class="d-none d-md-block">
+                  <a href="https://twitter.com" class="text-white">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+
+                <div>
+                  <a href="https://facebook.com" class="text-white">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </div>
+
+                <div>
+                  <a href="https://instagram.com" class="text-white">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+
+                <div>
+                  <a href="https://github.com" class="text-white">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+
+              </div>
+            </div>
+
+            <div class="p-4 db-bg-black">
+              Experienced Full Stack Web Developer
+            </div>
+
+            <div>
+              <div class="d-flex flex-row text-white align-items-stretch text-center">
+                <div class="db-port-item p-4 bg-primary" data-toggle="collapse" data-target="#home">
+                  <i class="fas fa-home fa-2x d-block">
+                    <span class="d-none d-sm-block">Home</span>
+                  </i>
+                </div>
+                <div class="db-port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
+                  <i class="fas fa-graduation-cap fa-2x d-block">
+                    <span class="d-none d-sm-block">Resume</span>
+                  </i>
+                </div>
+                <div class="db-port-item p-4 bg-warning" data-toggle="collapse" data-target="#work">
+                  <i class="fas fa-folder-open fa-2x d-block">
+                    <span class="d-none d-sm-block">Work</span>
+                  </i>
+                </div>
+                <div class="db-port-item p-4 bg-danger" data-toggle="collapse" data-target="#contact">
+                  <i class="fas fa-envelope fa-2x d-block">
+                    <span class="d-none d-sm-block">Contact</span>
+                  </i>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </header>
+
+    <!-- HOME -->
+
+    <div id="home" class="collapse show">
+      <div class="card card-body bg-primary text-white py-5">
+        <h2>Welcome To My Page</h2>
+        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsum?</p>
+      </div>
+
+      <div class="card card-body py-5">
+        <h3>My Skills</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem quam corrupti, quisquam nam
+          quaerat laboriosam.</p>
+        <hr>
+        <h4>HTML5</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>CSS3</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 100%"></div>
+        </div>
+        <h4>JavaScript</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 80%"></div>
+        </div>
+        <h4>Python</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 20%"></div>
+        </div>
+        <h4>PHP</h4>
+        <div class="progress mb-3">
+          <div class="progress-bar bg-success" style="width: 10%"></div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- RESUME -->
+
+    <div id="resume" class="collapse">
+      <div class="card card-body bg-success text-white py-5">
+        <h2>My Resume</h2>
+        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsum?</p>
+      </div>
+
+      <div class="card card-body py-5">
+        <h3>My Skills</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem quam corrupti, quisquam nam
+          quaerat laboriosam.</p>
+
+        <div class="card-deck">
+
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Devmasters</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, possimus?
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Position: Full Stack Developer
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Phone: (444) 444-4444
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2015 - 2018</h6>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">123 Designs</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, esse! Lorem, ipsum
+                dolor.
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Position: Web Designer
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Phone: (222) 222-2222
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2013 - 2015</h6>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Web Designer Pros</h4>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, esse! Lorem, ipsum
+                dolor.
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Position: Web Designer
+              </p>
+              <p class="bg-dark text-white p-2 mb-3">
+                Phone: (333) 333-3333
+              </p>
+            </div>
+            <div class="card-footer">
+              <h6 class="text-muted">Dates: 2011 - 2012</h6>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <!-- WORK -->
+
+    <div id="work" class="collapse">
+      <div class="card card-body bg-warning text-white py-5">
+        <h2>My Work</h2>
+        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsum?</p>
+      </div>
+
+      <div class="card card-body py-5">
+        <h3>What Have I Built?</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem quam corrupti, quisquam nam
+          quaerat laboriosam.</p>
+
+        <div class="row no-gutters">
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=281" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=281" alt="picture1" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=282" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=282" alt="picture2" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=283" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=283" alt="picture3" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=284" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=284" alt="picture4" class="img-fluid">
+            </a>
+          </div>
+
+        </div>
+
+        <div class="row no-gutters">
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=291" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=291" alt="picture5" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=292" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=292" alt="picture6" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=293" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=293" alt="picture7" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <a href="https://unsplash.it/1000/1000.jpg?image=294" data-toggle="lightbox">
+              <img src="https://unsplash.it/1000/1000.jpg?image=294" alt="picture8" class="img-fluid">
+            </a>
+          </div>
+
+        </div>
+
+
+      </div>
+    </div>
+
+
+    <!-- CONTACT -->
+
+    <div id="contact" class="collapse">
+      <div class="card card-body bg-danger text-white py-5">
+        <h2>Contact</h2>
+        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsum?</p>
+      </div>
+
+      <div class="card card-body py-5">
+        <h3>Get In Touch</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem quam corrupti, quisquam nam
+          quaerat laboriosam.</p>
+
+        <form>
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-user"></i>
+                </span>
+              </div>
+              <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-envelope"></i>
+                </span>
+              </div>
+              <input type="email" class="form-control bg-dark text-white" placeholder="Email">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <div class="input-group-prepend">
+                <span class="input-group-text bg-danger text-white">
+                  <i class="fas fa-pencil-alt"></i>
+                </span>
+              </div>
+              <textarea rows="2" class="form-control bg-dark text-white"></textarea>
+            </div>
+          </div>
+
+          <input type="submit" class="btn btn-danger btn-lg btn-block" value="Submit">
+
+        </form>
+
+
+      </div>
+    </div>
+
+
+    <!-- FOOTER -->
+    <footer id="db-main-footer" class="p-5 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="#" class="btn btn-outline-light">
+            <i class="fas fa-cloud"></i> Download Resume
+          </a>
+        </div>
+      </div>
+    </footer>
+
+  </div>
+
+
 
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -23,10 +354,19 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs="
+    crossorigin="anonymous"></script>
   <script>
-    // Get the current year for the copyright
-    $('#year').text(new Date().getFullYear());
+    // hiding other sections on click for the section
+    $('.db-port-item').click(function () {
+      $('.collapse').collapse('hide');
+    });
+
+    // Ekko lightbox for Botstrap
+    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });
   </script>
 </body>
 
